@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.2
 
+	- Fixed utf_strncasecmp and utf_strcasecmp
 	- Moved all inline constructors into source file to avoid bad DLLs
 	- Fixed Fl_Widget::copy_label() and Fl_Window::copy_label() when
 	  called with the old label() (STR #2836)
